<resources>
    <string name="app_name">Quiz App</string>
    <string name="question1">1.  HTML means HyperText Markup Linguistics </string>
    <string name="question1_opt1">True</string>
    <string name="question1_opt2">False</string>
    <string name="question2">2.  ScrollView can only have</string>
    <string name="question2_opt1"> One child view</string>
    <string name="question2_opt2"> Two child views</string>
    <string name="question2_opt3"> Four child views</string>
    <string name="question2_opt4"> Limitless child views</string>
    <string name="question3">3.  What is the full meaning of ADB? </string>
    <string name="answer_field3">Enter your answer here</string>
    <string name="question4">4.  In creating a user interface in Android, You have to use which of the following;</string>
    <string name="question4_opt1">Eclipse</string>
    <string name="question4_opt2">Java</string>
    <string name="question4_opt3">XML</string>
    <string name="question4_opt4">SQL</string>
    <string name="question5">5.  Required folder when Android project is created.</string>
    <string name="answer_field5">Type your answer here </string>
    <string name="question6">6.  Android is based on which kernel</string>
    <string name="question6_opt1">Linux kernel</string>
    <string name="question6_opt2">Windows kernel</string>
    <string name="question6_opt3">MAC Kernel</string>
    <string name="question6_opt4">Hybrid kernel</string>
    <string name="question7">7.  Select a component which is NOT part of Android architecture</string>
    <string name="question7_opt1">Android framework</string>
    <string name="question7_opt2">Libraries</string>
    <string name="question7_opt3">Linux kernel</string>
    <string name="question7_opt4">Android development</string>
    <string name="question8">8.  State the full meaning of APPT</string>
    <string name="answer_field8">Type your answer here</string>
    <string name="quizzCompletion">Thanks for completing the quiz</string>
    <string name="submit_text"> Submit </string>
    <string name="share_result">Share Result</string>
    <string name="your_result">Your Quiz App Result</string>

</resources>
